--- a/1.html
+++ b/1.html
@@ -3,24 +3,28 @@
 <head>
 <title>현영이의 웹-HTML</title>
 <meta charset="utf-8">
+<style>
+ a {
+   color:black;
+   text-decoration: none;
+ }
+ h1{font-size: 60px; text-align: center}
+</style>
 </head>
 <body>
-  <h1><a href="index.html" target="_blank">WEB - WELCOME</a></h1>
+  <h1><a href="index.html" target="_blank" style="color:pink">WEB - WELCOME</a></h1>
 <ul>
   <li><a href="1.html" target="_blank">1.HTML</a></li>
   <li><a href="2.html" target="_blank">2.CSS</a></li>
-  <li><a href="3.html" target="_blank">5.Javascript</a></li>
+  <li><a href="3.html" target="_blank">3.Javascript</a></li>
 </ul>
 <h2>hello world</h2>
 <h3><u>우와</u> 대박 <strong>현영이의</strong> 첫 웹페이지!!<h3>
 <h3>HTML이란 무엇인가?</h3>
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
-<h4>This is heading 4</h4>
-<h5>This is heading 5</h5>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <p style="margin-top:50px;"><h6>This is heading 6</h6>
-<a href="https://www.naver.com/" target="_blank" title="fantastic">South Korea's new daily virus</a> cases declined slightly on Thursday,
+<a href="https://www.naver.com/" target="_blank" title="fantastic"><font color="blue">South Korea's new daily virus</a></font> cases declined slightly on Thursday,
 but a continued rise in imported cases and infections linked to
 religious facilities continued to strain the country's virus fight.<p>The country added 50 cases, including 28 local infections,
 raising the total caseload to 13,293, according to the Korea Centers for Disease Control and Prevention (KCDC).<img src="ocean.jpg"width="100%"></p><p style="margin-top:15px;">
