--- a/3.html
+++ b/3.html
@@ -5,11 +5,11 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1<a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">WEB</a></h1>
 <ul>
   <li><a href="1.html" target="_blank">1.HTML</a></li>
   <li><a href="2.html" target="_blank">2.CSS</a></li>
-  <li><a href="3.html" target="_blank">5.Javascript</a></li>
+  <li><a href="3.html" target="_blank">3.Javascript</a></li>
 </ul>
 <h2>HELLO Javascript</h2>
 <p><h3>Javascript란 무엇인가?</h3></p>
